--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 .container{
     width: 100%;
     height: 100%;
-    background-color: rgba(245, 250, 249, 0.932);
+    background-color: white;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -16,19 +16,19 @@
 .cabecera{
     width: 100%;
     height: 5em;
-    border: 0.1em solid black;
+    
     display: flex;
     flex-direction: row;
 }
 .espacio{
     width: 85%;
     height: 5em;
-    border: 0.1em solid black;
+    
 }
 .espaciologos{
     width: 15%;
     height: 5em;
-    border: 0.1em solid black;
+    
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -36,19 +36,19 @@
 
 }
 .linkedin{
-    width: 3em;
-    height: 3em;
+    width: 2.5em;
+    height: 2.5em;
     display: flex;
-
 }
+
 .github{
-    width: 3em;
-    height: 3em;
+    width: 2.5em;
+    height: 2.5em;
     display: flex;
 }
 .contacto{
-    width: 3em;
-    height: 3em;
+    width: 2.5em;
+    height: 2.5em;
     display: flex;
     
 }
@@ -56,7 +56,7 @@
 .imagenpersonal{
     width: 100%;
     height: 20em;
-    border: 0.1em solid black;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,12 +76,12 @@ p{
     
 }
 .fotoprincipal{
-    width: 15em;
-    height: 15em;
+    width: 12em;
+    height: 12em;
     border: 0.1em solid black;
     display: flex;
     overflow: hidden;
-    border-radius: 50%;
+    border-radius: 10%;
       
 }
 .fotoprincipal img{
@@ -99,63 +99,38 @@ p{
 .containerdescripcion{
     width: 100%;
     height: 27em;
-    border: 0.1em solid black;
+    
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
 }
 .quiensoy{
-    width: 15em;
-    height: 27em;
-    border: 0.1em solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
-    transition: 2.5s;
+    text-align: justify;
+    text-indent: 5%;
+    width: 15em;
+    height: 27em;
+    border: 0.1em solid black;
+    border-radius: 2%;
+    transition: 2s;
+}
+.aboutme{
+    display: inline;
+    text-align: center;
+    width: 100%;
 }
 .quiensoy:hover{
     width: 22em;
-    height: 34em;
-    border-radius: 5%;
-    transition: 2.5s;
-}
-.quiensoy:hover .enunciado1{
-    width: 22em;
-    height: 6.2em;
-    border-radius: 8% 8% 0 0;
-    transition: 2.5s;
-    background-color: lightgrey;
-}
-.quiensoy:hover .desarrollo1{
-    display: flex;
-    text-align: justify;
-    text-indent: 5%;
-    width: 22em;
-    height: 27.8em;
-    background-color: grey;
-    border-radius: 0 0 5% 5%;
-    transition: 2.5s;
-}
-.enunciado1{
-    display: flex;
-    text-align: justify;
-    align-items: center;
-    justify-content: center;
-    width: 15em;
-    height: 5em;
-    background-color: grey;
-    transition: 2.5s;
-}
-.desarrollo1{
-    display: flex;
-    text-align: justify;
-    text-indent: 5%;
-    width: 15em;
     height: 22em;
-    background-color: lightgrey;
-    transition: 2.5s;
+    transition: 2s;
+    background-color: lightgray;
+    border-radius: 4%;
 }
+
+
 .espaciador1{
     width: 2em;
     height: 27em;
@@ -169,27 +144,20 @@ p{
     width: 15em;
     height: 27em;
     border: 0.1em solid black;
+    border-radius: 2%;
+    transition: 2s;
 }
-.enunciado2{
-    display: flex;
-    text-align: justify;
-    align-items: center;
-    justify-content: center;
-    width: 15em;
-    height: 5em;
-}
-.desarrollo2{
-    display: flex;
-    flex-direction: column;
-    text-align: justify;
-    text-indent: 5%;
-    width: 15em;
+.estudios:hover{
+    width: 22em;
     height: 22em;
+    transition: 2s;
+    background-color: lightgray;
+    border-radius: 4%;
 }
 .espaciador2{
     width: 2em;
     height: 27em;
-}
+} 
 .experiencia{
     display: flex;
     flex-direction: column;
@@ -199,23 +167,17 @@ p{
     width: 15em;
     height: 27em;
     border: 0.1em solid black;
+    border-radius: 2%;
+    transition: 2s;
 }
-.enunciado3{
-    display: flex;
-    text-align: justify;
-    align-items: center;
-    justify-content: center;
-    width: 15em;
-    height: 5em;
-}
-.desarrollo3{
-    display: flex;
-    text-align: justify;
-    flex-direction: column;
-    text-indent: 5%;
-    width: 15em;
+.experiencia:hover{
+    width: 22em;
     height: 22em;
+    transition: 2s;
+    background-color: lightgray;
+    border-radius: 4%;
 }
+
 .espaciador3{
     width: 2em;
     height: 27em;
@@ -229,31 +191,60 @@ p{
     width: 15em;
     height: 27em;
     border: 0.1em solid black;
+    border-radius: 2%;
+    transition: 2s;
 }
-.enunciado4{
+.proyectos:hover{
+    width: 22em;
+    height: 22em;
+    transition: 2s;
+    background-color: lightgray;
+    border-radius: 4%;
+}
+.containerreserva{
+    width: 100%;
+    height: 10em;
     display: flex;
-    text-align: justify;
+    
+}
+.footer{
+    width: 100%;
+    height: 12em;
+    
+    background-color: grey;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 15em;
-    height: 5em;
 }
-.desarrollo4{
+
+.footer2{
+    width: 15em;
+    height: 12em;
+    
     display: flex;
-    text-align: justify;
     flex-direction: column;
-    text-indent: 5%;
+    align-items: center;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.footer3{
     width: 15em;
-    height: 22em;
-}
-#h2{
+    height: 12em;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
 }
-#p2{
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
+p2{
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
-    text-indent: 10%;
+    text-indent: 5%;
 }
 a{
     text-align: justify;
